[package]
name = "pg-task-processor"
version = "0.1.0"
edition = "2021"
authors = ["Anderson <andycancado@gmail.com>"]

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
thiserror = "2.0.3"
anyhow = "1.0.93"

[build-dependencies]
sqlx-cli = "0.8.2"
